## Process this file with automake to produce Makefile.in

SUBDIRS             = conversions

nodist_pkginclude_HEADERS = CantorConfig.h

pkginclude_HEADERS  = AnnotatedArc.h             \
                      Arc.h                      \
                      ArcIterateur.h             \
                      Braid.h                    \
                      CantorErreurs.h            \
                      CantorVersion.h            \
                      Cone.h                     \
                      Creneau.h                  \
                      DeclDBL.h                  \
                      DeclDBLVD1.h               \
                      DeclDBLVD2.h               \
                      DeclVD1.h                  \
                      DeclVD1VD2.h               \
                      DeclVD2.h                  \
                      Field.h                    \
                      FonctionApprochee.h        \
                      InterfaceC.h               \
                      InterfaceF.h               \
                      Intervalle.h               \
                      MathPi.h                   \
                      MoindreCarreLineaire.h     \
                      Node.h                     \
                      Polynome.cpp               \
                      Polynome.h                 \
                      Resolution1.h              \
                      Resolution1Iterateur.h     \
                      Resolution2.h              \
                      Resolution2Iterateur.h     \
                      Rotation.cpp               \
                      Rotation.h                 \
                      Secteurs.h                 \
                      SectionDoree.h             \
                      StatistiqueEchantillon.h   \
                      Util.h                     \
                      ValeurDerivee1.h           \
                      ValeurDerivee2.h           \
                      Variation1.h               \
                      Variation2.h               \
                      Vecteur3.cpp               \
                      Vecteur3.h                 \
                      cantdefs.f
