## Process this file with automake to produce Makefile.in

nodist_pkginclude_HEADERS = MarmottesConfig.h

pkginclude_HEADERS =  BodyEphem.h                \
                      BodyEphemC.h               \
                      BodyEphemF.h               \
                      Etat.h                     \
                      Famille.h                  \
                      FamilleAbstraite.h         \
                      FamilleFixe.h              \
                      FamilleAlignementPlus.h    \
                      FamilleAlignementMoins.h   \
                      FamilleGenerale.h          \
                      FamilleProlongementPi.h    \
                      FamilleProlongementZero.h  \
                      InterfaceC.h               \
                      InterfaceF.h               \
                      Lecture.h                  \
                      Marmottes.h                \
                      MarmottesErreurs.h         \
                      MarmottesVersion.h         \
                      Modele.h                   \
                      ModeleCine.h               \
                      ModeleGeom.h               \
                      Parcelle.h                 \
                      ParcelleElementaire.h      \
                      ResolveurAttitude.h        \
                      ReunionEtParcelles.h       \
                      ReunionOuParcelles.h       \
                      Senseur.h                  \
                      SenseurAlpha.h             \
                      SenseurCardan.h            \
                      SenseurCartesien.h         \
                      SenseurCinematique.h       \
                      SenseurDelta.h             \
                      SenseurDiedre.h            \
                      SenseurElevation.h         \
                      SenseurFonction.h          \
                      SenseurFonctionEchant1D.h  \
                      SenseurFonctionGauss.h     \
                      SenseurFonctionSinCard2.h  \
                      SenseurFonctionSinCardXY.h \
                      SenseurGeometrique.h       \
                      SenseurGyroInteg.h         \
                      SenseurLimbe.h             \
                      SenseurOptique.h           \
                      SenseurVecteur.h           \
                      SpinAtt.h                  \
                      StationCible.h             \
                      TableInstances.h           \
                      marmdefs.f
