## Process this file with automake to produce Makefile.in

EXTRA_DIST = galileo.en        galileo.fr        \
             pseudo-sensors.en pseudo-sensors.fr \
             rf-link.en        rf-link.fr        \
             sensors.en        sensors.fr        \
             stations.en       stations.fr       \
             std15.en          std15.fr
